# streetcleaner

./: .gitignore  README.md  pnpm-lock.yaml
.devcontainer/: Dockerfile  devcontainer.json
app/: layout.tsx  page.tsx
app/auth/forgot-password/: page.tsx
app/auth/sign-up-success/: page.tsx
app/auth/update-password/: page.tsx
app/protected/: layout.tsx
app/protected/map/: page.tsx
app/protected/store/: page.tsx
backend/reporting/: pyproject.toml
backend/reporting/src/: main.py  models.py
backend/reporting/src/api/v1/: __init__.py  jobs.py
backend/reporting/src/schema/: jobs.sql
backend/reporting/src/services/: __init__.py  db.py  storage.py
backend/reporting/tests/: conftest.py
backend/reporting/tests/integration/: test_supabase.py
components/: auth-button.tsx  forgot-password-form.tsx  login-form.tsx  sign-up-form.tsx  update-password-form.tsx
frontend/: .env.example  .gitignore  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx  theme.ts
frontend/app/auth/error/: page.tsx
frontend/app/auth/forgot-password/: page.tsx
frontend/app/auth/sign-up-success/: page.tsx
frontend/app/protected/: layout.tsx  page.tsx
frontend/components/: add-pin-modal.tsx  auth-button-client.tsx  auth-button.tsx  forgot-password-form.tsx  login-form.tsx  logout-button.tsx  map-marker-icons.tsx  map-page-client.tsx  map-pin.tsx  map-provider.tsx  map.tsx  pin-info-modal.tsx  sign-up-form.tsx  update-password-form.tsx
frontend/hooks/: useMapPins.ts  useUserPoints.ts  useUserPoints.tsx
(+6 files in other folders)
